<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Update Setting</string>
    <string name="action_settings">Settings</string>
    <string name="mcuversion">MCU Verison:</string>
    <string name="sysversion">System Verison:</string>
    <string name="androidversion">Android Verison:</string>
    <string name="asternmute">Whether Astern Mute</string>
    <string name="lightstate">Car Light Backlight :</string>
    <string name="rearview_camera">AV-IN</string>
    <string name="mcu_diatext">发现MCU升级文件</string>
    <string name="auto_volume">Car Auto Volume :</string>
    <string name="check_update">Check Now</string>
    <string name="notice">Tip: Do not perform other operations in the process of upgrading, Lest cause an accident</string>
    <string name="version">Version Information</string>
    <string name="update">MCU Update</string>
    <string name="btupdate">BT Update</string>
    <string name="config">Vehicle Configuration</string>
    <string name="version_same">File version is the same as the system version</string>
    <string name="update_fail">Update Failed!!!</string>
    <string name="wipe_fail">Wipe Failed!!!</string>
    <string name="progress">MCU Update Progress</string>
    <string name="btprogress">BT Update Progress</string>
    <string name="btloadfile">BT Load ..........</string>
    <string name="btunzip">decompressing files</string>
    <string name="found">Found Update File</string>
    <string name="not_found">Update File Not Found</string>
    <string name="update_ok">Update Success</string>
    <string name="update_ok_msg">Is Restart, Please Later...</string>
    <string name="msg_1" />
    <string name="list_version">Box Version</string>
    <string name="list_update">MCU Update</string>
    <string name="list_config">Car Config</string>
    <string name="list_serial_config">Serial Config</string>
    <string name="list_car_config">Car Config</string>
    <string name="list_btupdate">BT Update</string>
    <string name="list_keysbacklight">Keysback Light</string>
    <string name="serial_label_OBD">OBD</string>
    <string name="serial_label_CAN">CAN Decoding Box</string>
    <string name="serial_label_Non">Non</string>
    <string name="car_of_Volkswagen">Volkswagen</string>
    <string name="car_of_Sonata8">Sonata-8</string>
    <string name="seekbar_value_max">255</string>
    <string name="seekbar_value_min">0</string>
    <string name="button_ok">OK</string>
    <string name="list_otg">OTG Model</string>
    <string name="otg_of_host">Connected devices</string>
    <string name="otg_of_slave">Connected PC</string>
    <string name="list_standby">Set The Standby</string>
    <string name="standby_half_hour">Half Hour</string>
    <string name="standby_one_hour">One Hour</string>
    <string name="standby_two_hour">Two Hour</string>
    <string name="standby_half_day">Half Day</string>
    <string name="standby_one_day">One Day</string>
    <string name="standby_no_standby">No Standby</string>
</resources>
