<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="25.0dip" android:paddingRight="10.0dip" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/config" />
    <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="7.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip">
        <CheckBox android:id="@+id/checkBoxMute" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/asternmute" />
    </LinearLayout>
    <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="7.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip">
        <CheckBox android:id="@+id/checkBoxCamera" android:layout_width="wrap_content" android:layout_height="wrap_content" android:checked="true" android:text="@string/rearview_camera" />
    </LinearLayout>
    <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="7.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip">
        <CheckBox android:id="@+id/checkBoxBrigth" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/lightstate" />
        <SeekBar android:id="@+id/seekBar1" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" />
    </LinearLayout>
    <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0px" android:layout_marginTop="7.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="14.0dip">
        <CheckBox android:id="@+id/checkBoxVolume" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/auto_volume" />
        <SeekBar android:id="@+id/seekBar2" android:layout_width="300.0dip" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" />
    </LinearLayout>
</LinearLayout>