<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="25.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/config" />
    <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="7.0dip" />
    <ScrollView android:scrollbarStyle="outsideOverlay" android:id="@id/sv" android:layout_width="fill_parent" android:layout_height="wrap_content" android:fadeScrollbars="false">
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" />
                <TextView android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/app_name" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
            </LinearLayout>
            <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
            </LinearLayout>
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
                <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/update" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>