<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:paddingLeft="10.0dip" android:paddingTop="25.0dip" android:paddingRight="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/list_keysbacklight" />
    <View android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="2.0dip" android:layout_marginTop="7.0dip" />
    <LinearLayout android:orientation="horizontal" android:layout_width="wrap_content" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
            <com.bonovo.colortools.MyViewRect android:id="@+id/min1" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="25.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min2" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min3" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min4" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min5" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="106.0dip" android:layout_height="wrap_content" android:layout_marginTop="25.0dip">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <com.bonovo.colortools.MyViewRect android:id="@+id/min6" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" />
                <com.bonovo.colortools.MyViewRect android:id="@+id/min7" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" />
            </LinearLayout>
            <com.bonovo.colortools.MyViewRectMID android:id="@+id/mid" android:layout_width="86.0dip" android:layout_height="139.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="10.0dip" />
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <com.bonovo.colortools.MyViewRect android:id="@+id/min8" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" />
                <com.bonovo.colortools.MyViewRect android:id="@+id/min9" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginLeft="20.0dip" />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip">
            <com.bonovo.colortools.MyViewRect android:id="@+id/min10" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="25.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min11" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min12" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min13" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
            <com.bonovo.colortools.MyViewRect android:id="@+id/min14" android:layout_width="33.0dip" android:layout_height="33.0dip" android:layout_marginTop="10.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="wrap_content">
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <TextView android:textSize="20.0sp" android:textColor="#ffff0000" android:layout_gravity="center" android:id="@+id/textValueR" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_gravity="center" android:id="@+id/textViewRmin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/seekbar_value_min" />
                <SeekBar android:id="@+id/seekBarR" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_gravity="center" android:id="@+id/textViewRmax" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seekbar_value_max" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="#ff00ff00" android:layout_gravity="center" android:id="@+id/textValueG" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_gravity="center" android:id="@+id/textViewGmin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/seekbar_value_min" />
                <SeekBar android:id="@+id/seekBarG" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_gravity="center" android:id="@+id/textViewGmax" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seekbar_value_max" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
                <TextView android:textSize="20.0sp" android:textColor="#ff0000ff" android:layout_gravity="center" android:id="@+id/textValueB" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="50.0dip" />
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
                <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_gravity="center" android:id="@+id/textViewBmin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:text="@string/seekbar_value_min" />
                <SeekBar android:id="@+id/seekBarB" android:layout_width="200.0dip" android:layout_height="wrap_content" android:layout_weight="1.0" />
                <TextView android:textSize="20.0sp" android:textColor="#ff00ced1" android:layout_gravity="center" android:id="@+id/textViewBmax" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/seekbar_value_max" />
            </LinearLayout>
            <Button android:id="@+id/ok" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="150.0dip" android:text="@string/button_ok" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>